--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -7,6 +7,7 @@
 						<h1 class="title">An Agency</h1>
 			      		<h2 class="color c-blue">For Artists</h2>
 			      		<p class="mw-50">Artyque for Artists is a new kind of service</p>
+			      		<p class="fake-link color c-blue">Read More</p>
 		      		</div>
 		      		<%= image_tag "pic-1.png" %>
 				</div>
@@ -18,7 +19,8 @@
 				<div class="text-cards">
 					<h1 class="color c-white title">A Solution</h1>
 		      		<h2 class="color c-white">For Galleries</h2>
-		      		<p>a new kind of service that simplifies the way you look for Artists and organize your shows. </p>	
+		      		<p>Change the way you look for Artists and organize your shows. </p>	
+		      		<p class="fake-link color c-white">Read More</p>
 	      		</div>
 			</div>
 		</div>
@@ -28,6 +30,7 @@
 					<h1 class="title">An Advisor</h1>
 		      		<h2 class="color c-blue">For Collectors</h2>
 		      		<p>Have access to over 100 artists’ portfolios.</p>
+		      		<p class="fake-link color c-blue">Read More</p>
 	      		</div>
 			</div>
 		</div>	
