--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -10,14 +10,16 @@
       <div class="modal-body">
         <div class="text-body">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Galleries</h1>
+            <h1 class="title text-center">Artique For Artists</h1>
             <br>
-            <h2 class="color c-blue modal-lead-text">Artyque for Galleries is a new kind of service that simplifies the way you look for Artists and organize your shows. </h2>
+            <h2 class="color c-blue modal-lead-text">Artyque for Artists is a new kind of service that allies the expertise of an agent with the power of connection only a digital platform can provide.</h2>
           </div>
           <div class="container-fluid separate-content-bottom">
             <div class="row">
-              <div class="col-12 col-sm-6">Following your preferences and specifications, we propose a selection of the top emerging artists from within our agency to you on a regular basis. Once you have chosen the artist for your next exhibition, we support you in the organisation of the show with our in-house curators, PR specialists and partners.</div>
-              <div class="col-12 col-sm-6">We carefully scope regional markets (Europe, West Africa, and Russia at the moment) and select the most promising artists in order to bring you quality and singularity to your art space while you focus solely on developing your relationship with clients and grow your reputation. </div>
+              <div class="col-12 col-sm-6">Acting on your behalf and only in your interest, we negotiate, organise and promote your exhibitions across Europe, find fundings for your projects, develop your provenance and ultimately increase the value of your works. 
+              <br><br><b class="color c-blue">Your only task will be creating your next masterpiece.</b></div>
+              <div class="col-12 col-sm-6"> 
+                After signing with us you will get a personal agent and access to our platform on which you will develop your profile and digital portfolio. We will then work our magic while you enjoy a stress-free creation process back to your studio. </div>
             </div>
           </div>
         </div>
@@ -25,21 +27,20 @@
       <div class="container-bullets">
          <div class="w-100 wrapper-body-bullets background bg-blue">
           <ul>
-            <li> Simplify your artists’ hunt</li> 
-            <li> Collaborate with young and talented curators</li> 
+            <li> Promote your portfolio to galleries and art institutions that fit your talent</li> 
+            <li> Organise new shows of your works in Europe</li> 
             <li> Increase your press visibility</li> 
-            <li> Reach new clients and establish a stronger relationship with existing ones</li> 
-            <li> Get discounts from our partners (logistic, Insurance, digital services, and more)</li> 
+            <li> Connect you with collectors and patrons</li> 
+            <li> Support your career growth </li> 
           </ul>
         </div>
       </div>
        <div class="text-body text-center separate-content">
           <div class="body-title">
             <h1 class="title text-center">Artique For Galleries</h1>
-            <br>
-            <h2 class="color c-blue modal-lead-text"> Get in touch now and gain early access at the <br>opening of the Artyque platform</h2>
+            <h2 class="color c-blue modal-lead-text">Places are limited. </h2>
           </div>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Sign Up</button>
         </div> 
     </div>
   </div>
@@ -83,10 +84,9 @@
        <div class="text-body text-center separate-content">
           <div class="body-title">
             <h1 class="title text-center">Artique For Galleries</h1>
-            <br>
             <h2 class="color c-blue modal-lead-text"> Get in touch now and gain early access at the <br>opening of the Artyque platform</h2>
           </div>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Sign Up</button>
         </div> 
     </div>
   </div>
@@ -104,14 +104,14 @@
       <div class="modal-body">
         <div class="text-body">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Galleries</h1>
+            <h1 class="title text-center">Artyque for Collectors</h1>
             <br>
-            <h2 class="color c-blue modal-lead-text">Artyque for Galleries is a new kind of service that simplifies the way you look for Artists and organize your shows. </h2>
+            <h2 class="color c-blue modal-lead-text">Artyque for Collectors is a new kind of service that will help you to invest in art in a completely new and more rewarding way and become a true tastemaker.</h2>
           </div>
           <div class="container-fluid separate-content-bottom">
             <div class="row">
-              <div class="col-12 col-sm-6">Following your preferences and specifications, we propose a selection of the top emerging artists from within our agency to you on a regular basis. Once you have chosen the artist for your next exhibition, we support you in the organisation of the show with our in-house curators, PR specialists and partners.</div>
-              <div class="col-12 col-sm-6">We carefully scope regional markets (Europe, West Africa, and Russia at the moment) and select the most promising artists in order to bring you quality and singularity to your art space while you focus solely on developing your relationship with clients and grow your reputation. </div>
+              <div class="col-12 col-sm-6">Putting you at the centre of the creation cycle alongside our artists, we will give you the opportunity to meet them and to buy and commission their art. You will then be able to invest in their careers by funding carefully planned artistic projects and international tours for their works to increase their value and recognition. By doing so, you will take part in setting new trends you truly believe in and become an influential player in the art world.</div>
+              <div class="col-12 col-sm-6">We want to provide you with a new and easy way of investing in art, whereby investing does not only mean buying and selling works but also directly supporting the rise of your favourite artists and so, of your collection’s value.</div>
             </div>
           </div>
         </div>
@@ -119,21 +119,22 @@
       <div class="container-bullets">
          <div class="w-100 wrapper-body-bullets background bg-blue">
           <ul>
-            <li> Simplify your artists’ hunt</li> 
-            <li> Collaborate with young and talented curators</li> 
-            <li> Increase your press visibility</li> 
-            <li> Reach new clients and establish a stronger relationship with existing ones</li> 
+            <li> Have access to carefully selected artists’ portfolios</li> 
+            <li> Be able to commission art pieces</li> 
+            <li> Take part in exclusive pre-sales events</li> 
+            <li> Support your favourite artists’ growth</li> 
+            <li> Increase the value of your collection</li> 
             <li> Get discounts from our partners (logistic, Insurance, digital services, and more)</li> 
+            <li> Participate in members-only events</li>
           </ul>
         </div>
       </div>
        <div class="text-body text-center separate-content">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Galleries</h1>
-            <br>
-            <h2 class="color c-blue modal-lead-text"> Get in touch now and gain early access at the <br>opening of the Artyque platform</h2>
+            <h1 class="title text-center">Artique For Collectors</h1>
+            <h2 class="color c-blue modal-lead-text"> Contact us to learn more about our Membership program.</h2>
           </div>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary">Sign Up</button>
         </div> 
     </div>
   </div>
