--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,12 @@
 <%= render 'shared/banner_carousel_wrapper' do %>
-  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Welcome to Artyque ", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Learn More", path: "#" }, image: "h_img_artist.png", subtitle: "for artists" %>
-  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Support, Growth, Opportunities", text: "We assist artists, provide tools for galleries, and turn the new collectors into wise tastemakers.", button: { label: "Learn More", path: "#" }, image: "h_img_gallery.png", subtitle: "for galleries" %>
-  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Your art consultant", text: "Artyque is like having a personal assistant, but better.", button: { label: "Button 1", path: "#" }, image: "h_img_collector.png", subtitle: "for galleries" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Welcome to Artyque ", text: "The digital agency and platform aiming to create a European network for Emerging artists, galleries and collectors to collaborate and grow together.", button: { label: "Learn More", path: "#mission" }, image: "h_img_artist.png", subtitle: "for artists" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Support, Growth, Opportunities", text: "We assist artists, provide tools for galleries, and turn the new collectors into wise tastemakers.", button: { label: "Learn More", path: "#mission" }, image: "h_img_gallery.png", subtitle: "for galleries" %>
+  <%= render 'shared/banner_carousel_content', title: "coming fall 2019", header: "Your art consultant", text: "Artyque is like having a personal assistant, but better.", button: { label: "Learn More", path: "#mission" }, image: "h_img_collector.png", subtitle: "for galleries" %>
 <% end %>
+
+<div id="mission"></div>
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
-
 
 <%= render 'shared/carousel', laptop: true, height: 350, images: %w[
   screen_a.png
@@ -13,8 +14,10 @@
   screen_c.png
 ] %>
 
+<div id="about"></div>
 <%= render 'shared/about_section' %>
 
+<div id="contact"></div>
 <div class="form-set">
   <%= render 'contact_forms/new' %>
 </div>
