--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,9 @@
   </div>
   <div class="menu hidden" id="navbar-menu">
     <ul class="links">
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">Our Mission</a></li>
-      <li><a href="#">About Us</a></li>
+      <li><a href="#mission" class="navbar-link">Our Mission</a></li>
+      <li><a href="#about" class="navbar-link">About Us</a></li>
+      <li><a href="#contact" class="navbar-link">Contact</a></li>
     </ul>
     <ul class="social">
       <li><a href="#"><i class="fab fa-instagram"></i></a></li>
