cursor pointer on fake links

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -36,6 +36,7 @@
 	.fake-link {
 		text-decoration: underline;
 		font-style: italic;
+    @extend .cursor-pointer;
 		&:hover {
 			opacity: .8;
 		}
