some card and carousel updates

--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -6,7 +6,7 @@
 					<div class="text-cards">
 						<h1 class="title">An Agency</h1>
 			      		<h2 class="color c-blue">For Artists</h2>
-			      		<p class="mw-50">Artyque for Artists is a new kind of service</p>
+			      		<p class="mw-50">Combine the expertise that an agent can offer with the power of connection only a digital platform can provide.</p>
 			      		<p class="fake-link color c-blue">Read More</p>
 		      		</div>
 		      		<%= image_tag "pic-1.png" %>
@@ -19,7 +19,7 @@
 				<div class="text-cards">
 					<h1 class="color c-white title">A Solution</h1>
 		      		<h2 class="color c-white">For Galleries</h2>
-		      		<p>Change the way you look for Artists and organize your shows. </p>	
+		      		<p>Change the way you look for Artists and organize your shows.</p>	
 		      		<p class="fake-link color c-white">Read More</p>
 	      		</div>
 			</div>
