--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -24,7 +24,7 @@
     justify-content: left;
   }
   .carousel-overlay{
-    z-index: $zindex-tooltip;
+    z-index: $zindex-sticky;
     @include media-breakpoint-down(sm) {
       width: 120vw;
       height: auto;
