change sign up link paths

--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -40,7 +40,7 @@
             <h1 class="title text-center">Artique For Galleries</h1>
             <h2 class="color c-blue modal-lead-text">Places are limited. </h2>
           </div>
-          <button type="button" class="btn btn-primary">Sign Up</button>
+          <a href="#contact" class="button-primary">Sign Up</a>
         </div> 
     </div>
   </div>
@@ -86,7 +86,7 @@
             <h1 class="title text-center">Artique For Galleries</h1>
             <h2 class="color c-blue modal-lead-text"> Get in touch now and gain early access at the <br>opening of the Artyque platform</h2>
           </div>
-          <button type="button" class="btn btn-primary">Sign Up</button>
+          <a href="#contact" class="button-primary">Sign Up</a>
         </div> 
     </div>
   </div>
@@ -134,7 +134,7 @@
             <h1 class="title text-center">Artique For Collectors</h1>
             <h2 class="color c-blue modal-lead-text"> Contact us to learn more about our Membership program.</h2>
           </div>
-          <button type="button" class="btn btn-primary">Sign Up</button>
+          <a href="#contact" class="button-primary">Sign Up</a>
         </div> 
     </div>
   </div>
