--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,11 +8,25 @@
 <%= render 'shared/line_intro' %>
 <%= render 'shared/cards' %>
 
-<%= render 'shared/carousel', laptop: true, height: 350, images: %w[
+<div class="laptop-carousel-wrapper">
+	<div class="container">
+		<div class="col intro-laptop">
+			<h1 class="title">We represent</h1>
+			<h2 class="color c-blue">Artists</h2>
+		</div>
+	</div>
+  <%= render 'shared/carousel', laptop: true, height: 350, images: %w[
   screen_a.png
   screen_b.png
   screen_c.png
 ] %>
+	<br>
+	<div class="container">
+		<div class="col text-center cta-laptop">
+			<a href="#contact" class="button-primary">Get in Touch</a>
+		</div>
+	</div>
+</div>
 
 <div id="about"></div>
 <%= render 'shared/about_section' %>
