First version close

--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -6,10 +6,10 @@
 					<div class="text-cards">
 						<h1 class="title">An Agency</h1>
 			      		<h2 class="color c-blue">For Artists</h2>
-			      		<p class="mw-50">Combine the expertise that an agent can offer with the power of connection only a digital platform can provide.</p>
+			      		<p class="mw-50">Combine the expertise that an agent can offer with the power of<br> connection only a digital platform can provide.</p>
 			      		<p class="fake-link color c-blue">Read More</p>
 		      		</div>
-		      		<%= image_tag "pic-1.png" %>
+		      		<%= image_tag "pic-1.png", class: "d-none d-sm-block" %>
 				</div>
 			</div>
 		</div>
