--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -40,7 +40,9 @@
             <h1 class="title text-center">Artique For Galleries</h1>
             <h2 class="color c-blue modal-lead-text">Places are limited. </h2>
           </div>
-          <a href="#contact" class="button-primary">Sign Up</a>
+          <div class="form-set">
+              <%= render 'contact_forms/new' %>
+           </div> 
         </div> 
     </div>
   </div>
@@ -86,7 +88,9 @@
             <h1 class="title text-center">Artique For Galleries</h1>
             <h2 class="color c-blue modal-lead-text"> Get in touch now and gain early access at the <br>opening of the Artyque platform</h2>
           </div>
-          <a href="#contact" class="button-primary">Sign Up</a>
+        <div class="form-set">
+          <%= render 'contact_forms/new' %>
+        </div>
         </div> 
     </div>
   </div>
@@ -134,7 +138,9 @@
             <h1 class="title text-center">Artique For Collectors</h1>
             <h2 class="color c-blue modal-lead-text"> Contact us to learn more about our Membership program.</h2>
           </div>
-          <a href="#contact" class="button-primary">Sign Up</a>
+           <div class="form-set">
+              <%= render 'contact_forms/new' %>
+           </div> 
         </div> 
     </div>
   </div>
