Commit my change

--- a/app/assets/stylesheets/components/_modals.scss
+++ b/app/assets/stylesheets/components/_modals.scss
@@ -25,6 +25,7 @@
     }
 	.modal-lead-text {
     	font-weight: bold;
+    	min-width: 500px;
     	text-align: center;
 	    line-height: 37px;
 		font-size: 24px;
