fix multiple contact form bug

--- a/app/views/contact_forms/create.js.erb
+++ b/app/views/contact_forms/create.js.erb
@@ -1,6 +1,8 @@
 function refreshForm(innerHTML) {
-  const contactForm = document.getElementById('new-contact-form');
-  contactForm.innerHTML = innerHTML;
+  const contactForms = document.querySelectorAll('.new-contact-form');
+  contactForms.forEach((form) => {
+    form.innerHTML = innerHTML;
+  });
 }
 
 <% if @contact_form.errors.any? %>
