--- a/app/views/contact_forms/_new.html.erb
+++ b/app/views/contact_forms/_new.html.erb
@@ -1,4 +1,4 @@
-<div id="new-contact-form">
+<div class="new-contact-form">
   <h2 class="color c-blue text-center">Get in touch</h2>
   <br>
   <%= simple_form_for @contact_form, remote: true do |f| %>
