--- a/app/views/shared/_about_section.html.erb
+++ b/app/views/shared/_about_section.html.erb
@@ -35,9 +35,8 @@
 			</div>
 			<div class="text col">
 				<h1 class="title">Our Philosophy</h1>
-				<h2 class="color c-blue">Competition is outdated</h2>
 				<br>
-				<p class="color c-dark-blue">To respond to the biggest challenges our society is facing today, we believe that collaboration and altruism need to be the foundation of everything we do. By building this platform and community, we want to give the option of a different approach to the actors of the Art industry, for them to work and grow together in a fair and innovative way. We are building Artyque with all the necessary business acumen but also with all the possible creativity and sensitivity in order to be able to ally collective effort, common good and strategic growth for each one of our members. </p>
+				<p class="color c-dark-blue">Competition is outdated, to respond to the biggest challenges our society is facing today, we believe that collaboration and altruism need to be the foundation of everything we do. By building this platform and community, we want to give the option of a different approach to the actors of the Art industry, for them to work and grow together in a fair and innovative way. We are building Artyque with all the necessary business acumen but also with all the possible creativity and sensitivity in order to be able to ally collective effort, common good and strategic growth for each one of our members. </p>
 			</div>
 		</div>
 	</div>
