--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,16 @@
+.main-banner {
+	.banner-content, .flickity-viewport {
+		min-height: 710px;
+		@include media-breakpoint-up(sm) {
+			min-height: 0;	
+		}
+	}
+}
+
 .wrapper-banner {
 	@extend .bg-beige;
-	.banner-content{
-		@include make-container;
+	.banner-content {
+	@include make-container;
     @extend .p-0;
 		@include media-breakpoint-up(sm) {
       width: calc(100vw - 2 * #{$header-height});
