--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="<%= image_path 'favicon-01.png' %>">
     <title>Artyque<%= " —— #{@title}" if @title.present? %></title>
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
