fixed bug that alex cant see

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -21,7 +21,8 @@
 		height: calc(100vh - #{$header-height});
 		@include media-breakpoint-up(sm) {
 		    height: 80vh;
-       padding-left: 50px;
+      		padding-left: 50px;
+      		max-width: 95%;
 		}
 	}
 	.banner-card-subtitle {	
