--- a/app/views/shared/_banner_carousel_content.html.erb
+++ b/app/views/shared/_banner_carousel_content.html.erb
@@ -1,6 +1,6 @@
 <div class="banner-carousel-cell w-100 m-0 p-0">
   <div class="row">
-    <div class="col inner-banner w-100 position-relative d-sm-flex align-items-center">
+    <div class="col inner-banner position-relative d-sm-flex align-items-center">
       <div class="text-lockup col-12 col-md-6">
         <h1 class="title color c-beige"><%= title %></h1>
         <h1 class="color c-white"><%= header %></h1>
