--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -37,7 +37,7 @@
       </div>
        <div class="text-body text-center separate-content">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Galleries</h1>
+            <h1 class="title text-center">Artique For Artists</h1>
             <h2 class="color c-blue modal-lead-text">Places are limited. </h2>
           </div>
           <div class="form-set">
