added links for social accounts

--- a/app/assets/stylesheets/design_toolbox/_link.scss
+++ b/app/assets/stylesheets/design_toolbox/_link.scss
@@ -4,3 +4,11 @@ a{
     @extend .color-blue;
   }
 }
+
+.social-link {
+  text-decoration: none;
+  @extend .color-white;
+  &:hover{
+    @extend .color-beige;
+  }
+}
