--- a/app/assets/stylesheets/components/_about_section.scss
+++ b/app/assets/stylesheets/components/_about_section.scss
@@ -7,7 +7,7 @@
     	font-size: 16px;
 	}
 	.person-lockup {
-		margin-bottom: 45px;
+		@extend .mb-2;
 		.name-lockup {
 			h1 {
 				font-size: 10px;
@@ -27,7 +27,7 @@
 		}
 	}
 	.text {
-		margin-top: 30px;
+    @extend .mt-4;
 		h2 {
 			font-size: 28px;
 		}
