fix up carousel with woman showing first

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 			<h2 class="color c-blue">Artists</h2>
 		</div>
 	</div>
-  <%= render 'shared/carousel', laptop: true, height: 350, images: %w[
+  <%= render 'shared/carousel', laptop: true, initial: 1, height: 350, images: %w[
   screen_a.png
   screen_b.png
   screen_c.png
