make body color dark blue and fix related colors

--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -14,7 +14,7 @@
 			</div>
 		</div>
 		<div class="col-12 col-sm-6">
-			<div class="backround bg-blue shadow sb-light card card-galleries" data-toggle="modal" data-target="#modal_galleries">
+			<div class="backround c-light-gray bg-blue shadow sb-light card card-galleries" data-toggle="modal" data-target="#modal_galleries">
 				<%= image_tag "pic-2.png", style: "width: 100%" %>
 				<div class="text-cards">
 				<h1 class="color c-white title">A Solution</h1>
