--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="container-bullets">
-         <div class="w-100 wrapper-body-bullets background bg-blue">
+         <div class="w-100 wrapper-body-bullets background c-light-gray bg-blue">
           <ul>
             <li> Promote your portfolio to galleries and art institutions that fit your talent</li> 
             <li> Organise new shows of your works in Europe</li> 
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="container-bullets">
-         <div class="w-100 wrapper-body-bullets background bg-blue">
+         <div class="w-100 wrapper-body-bullets background c-light-gray bg-blue">
           <ul>
             <li> Simplify your artists’ hunt</li> 
             <li> Collaborate with young and talented curators</li> 
@@ -121,7 +121,7 @@
         </div>
       </div>
       <div class="container-bullets">
-         <div class="w-100 wrapper-body-bullets background bg-blue">
+         <div class="w-100 wrapper-body-bullets background c-light-gray bg-blue">
           <ul>
             <li> Have access to carefully selected artists’ portfolios</li> 
             <li> Be able to commission art pieces</li> 
