another color fix

--- a/app/views/shared/_banner_carousel_content.html.erb
+++ b/app/views/shared/_banner_carousel_content.html.erb
@@ -4,7 +4,7 @@
       <div class="text-lockup col-12 col-md-6">
         <h1 class="title color c-beige"><%= title %></h1>
         <h1 class="color c-white"><%= header %></h1>
-        <p><%= text %></p>
+        <p class="c-light-gray"><%= text %></p>
         <%= link_to button[:label], button[:path], class: "button-primary" %>
       </div>
       <div class="shadow sb-light background bg-dark-blue image-lockup col-12 col-md-6">
