--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -10,7 +10,7 @@
       <div class="modal-body">
         <div class="text-body">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Artists</h1>
+            <h1 class="title text-center">Artyque For Artists</h1>
             <br>
             <h2 class="color c-blue modal-lead-text">Artyque for Artists is a new kind of service that allies the expertise of an agent with the power of connection only a digital platform can provide.</h2>
           </div>
@@ -60,7 +60,7 @@
       <div class="modal-body">
         <div class="text-body">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Galleries</h1>
+            <h1 class="title text-center">Artyque For Galleries</h1>
             <br>
             <h2 class="color c-blue modal-lead-text">Artyque for Galleries is a new kind of service that simplifies the way you look for Artists and organize your shows. </h2>
           </div>
