--- a/app/views/shared/_modals.html.erb
+++ b/app/views/shared/_modals.html.erb
@@ -37,7 +37,7 @@
       </div>
        <div class="text-body text-center separate-content">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Artists</h1>
+            <h1 class="title text-center">Artyque For Artists</h1>
             <h2 class="color c-blue modal-lead-text">We are here for your success.</h2>
           </div>
           <div class="form-set">
@@ -85,7 +85,7 @@
       </div>
        <div class="text-body text-center separate-content">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Galleries</h1>
+            <h1 class="title text-center">Artyque For Galleries</h1>
             <h2 class="color c-blue modal-lead-text"> Get in touch now and gain early access at the <br>opening of the Artyque platform</h2>
           </div>
         <div class="form-set">
@@ -135,7 +135,7 @@
       </div>
        <div class="text-body text-center separate-content">
           <div class="body-title">
-            <h1 class="title text-center">Artique For Collectors</h1>
+            <h1 class="title text-center">Artyque For Collectors</h1>
             <h2 class="color c-blue modal-lead-text"> Contact us to learn more about our Membership program.</h2>
           </div>
            <div class="form-set">
