--- a/app/views/shared/_about_section.html.erb
+++ b/app/views/shared/_about_section.html.erb
@@ -13,7 +13,7 @@
 				</div>
 				<br>
 				<div class="name-lockup col">
-					<h2 class="color c-blue">Mattia Cremiux</h2>
+					<h2 class="color c-blue">Mattia Cremieux</h2>
 					<h1 class="title">CEO & Co-Founder</h1>
 				</div>
 			</div>
