--- a/app/views/contact_forms/_new.html.erb
+++ b/app/views/contact_forms/_new.html.erb
@@ -7,8 +7,16 @@
       "A Gallery" => 'gallery',
       "A Collector" => 'collector'
     }, prompt: "I am..." %>
-    <%= f.input :name, :required => true, label: false, placeholder: "Name" %>
+    <div class="row">
+      <div class="col-sm-6">
+        <%= f.input :first_name, :required => true, label: false, placeholder: "First name" %>
+      </div>
+      <div class="col-sm-6">
+        <%= f.input :last_name, :required => true, label: false, placeholder: "Last name" %>
+      </div>
+    </div>
     <%= f.input :email, :required => true, label: false, placeholder: "Email" %>
+    <%= f.input :website, :required => false, label: false, placeholder: "Website (optional)" %>
     <%= f.input :message, :as => :text, :required => false, label: false, placeholder: "Message (optional)" %>
     <div class="hidden">
       <%= f.input :nickname, :hint => 'Leave this field blank!' %>
