--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -24,7 +24,7 @@
 }
 
 body{
-  margin-top: $header-height; // Offset body start to bottom of header
+  padding-top: $header-height; // Offset body start to bottom of header
 }
 
 
