--- a/app/views/contact_forms/success.html.erb
+++ b/app/views/contact_forms/success.html.erb
@@ -1,3 +1,9 @@
-<#% Only displayed when JavaScript response not enabled and for testing %>
-
-<%= render 'contact_forms/success' %>
+<div class="container">
+  <div class="row">
+    <div class="col text-center m-5 p-5">
+      <div class="panel">
+        <%= render 'contact_forms/success' %>
+      </div>
+    </div>
+  </div>
+</div>
