--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -71,5 +71,13 @@
       }
     }
   }
+
+  // Devise Login
+  .login-button{
+    position: absolute;
+    bottom: 0;
+    @extend .p-4;
+    width: 100%;
+  }
 }
 
