--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,4 +2,13 @@
   <div class="image">
     <%= image_tag 'logo-footer.svg', class: 'logo' %>
   </div>
+  <ul class="links">
+    <li id="login-button">
+      <% if user_signed_in? %>
+        <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Artist Login" %>
+      <% end %>
+    </li>
+  </ul>
 </footer>
