--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -9,9 +9,10 @@
     list-style: none;
     font-size: 1rem;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 100;
     position: absolute;
     right: 0;
+    text-align: right;
     @extend .pr-4;
     @extend .mb-0;
     li{
