--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,5 +12,16 @@
         <%= link_to "Artist Login", new_user_session_path %>
       <% end %>
     </li>
+    <% if user_signed_in? %>
+      <% if current_user.admin? %>
+        <li>
+          <%= link_to "Admin Dashboard", admin_dashboard_path %>
+        </li>
+      <% elsif current_user.artist? && current_user.artist %>
+        <li>
+          <%= link_to "My Artist Profile", admin_dashboard_path %>
+        </li>
+      <% end %>
+    <% end %>
   </ul>
 </footer>
