--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -6,13 +6,13 @@
   </div>
 </div>
 
-<div class="container artist-list">
+<div class="container artist-list pt-2">
   <div class="row">
     <div class="col">
       <ul class="list-group">
         <% @artists.each do |artist| %>
-          <%= link_to artist_path(artist) do %>
-            <li class="list-group-item list-group-item-action">artist.name</li>  
+          <%= link_to edit_artist_path(artist) do %>
+            <li class="list-group-item list-group-item-action"><%= artist.name %></li>  
           <% end %>
         <% end %>
       </ul>
