fix up some pundit stuff, etc

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -6,7 +6,12 @@
   </div>
 </div>
 
-<div class="container artist-list pt-2">
+<div class="container artist-list">
+  <div class="row pt-3">
+    <div class="col">
+      <h2>All Artists</h2>
+    </div>
+  </div>
   <div class="row">
     <div class="col">
       <ul class="list-group">
