--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar">
+<nav class="navbar">
   <div class="open-button">
     <a href="#" title="Open navigation bar" id="navbar-open-button">
       <i class="fas fa-bars"></i>
@@ -20,4 +20,4 @@
       <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
     </ul>
   </div>
-</div>
+</nav>
