--- a/app/assets/stylesheets/design_toolbox/_border.scss
+++ b/app/assets/stylesheets/design_toolbox/_border.scss
@@ -12,4 +12,16 @@
   &-dark-blue{
     border: 1px solid $dark-blue;
   }
+  &-bottom{
+    &-light-gray{
+      border-bottom: 1px solid $light-gray !important;
+    }
+  }
+  &-left{
+    &-blue{
+      &-thick{
+        border-left: 0.5rem solid $blue !important;
+      }
+    }
+  }
 }
