--- a/app/assets/stylesheets/design_toolbox/_border.scss
+++ b/app/assets/stylesheets/design_toolbox/_border.scss
@@ -17,6 +17,11 @@
       border-bottom: 1px solid $light-gray !important;
     }
   }
+  &-top{
+    &-light-gray{
+      border-top: 1px solid $light-gray !important;
+    }
+  }
   &-left{
     &-blue{
       &-thick{
