--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
   <div class="row">
-    <%= render 'dashboard' %>
+    <%= render 'dashboard', artist: @artist, stage: :header %>
   </div>
 </div>
