finish up "header" form

--- a/app/views/artists/_dashboard.html.erb
+++ b/app/views/artists/_dashboard.html.erb
@@ -3,9 +3,11 @@
 </div>
 <div class="col-12 col-sm-9">
   <div class="form-panel">
-    <% case stage %>
-    <% when :header %>
-      <%= render 'header', artist: artist %>
-    <% end %>
+    <div id="edit-form">
+      <% case stage %>
+      <% when :header %>
+        <%= render 'header', artist: artist %>
+      <% end %>
+    </div>
   </div>
 </div>
