implement new feature tests and remote link working

--- a/app/views/artists/_dashboard.html.erb
+++ b/app/views/artists/_dashboard.html.erb
@@ -1,5 +1,5 @@
 <div class="col-12 col-sm-3">
-  <%= render 'navigation', selected: stage %>
+  <%= render 'navigation', selected: stage, artist: artist %>
 </div>
 <div class="col-12 col-sm-9">
   <div class="form-panel">
