--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
       <% if user_signed_in? %>
         <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
       <% else %>
-        <%= link_to "Artist Login", new_user_session_path %>
+        <%= link_to "Artist Login", new_user_session_path, id: 'login' %>
       <% end %>
     </li>
     <% if user_signed_in? %>
