more fun with feature tests and ajax

--- a/app/views/artists/layout.html.erb
+++ b/app/views/artists/layout.html.erb
@@ -1,5 +1,5 @@
 <div class="container-fluid">
   <div class="row" id="edit-dashboard">
-    <%= render 'dashboard', artist: @artist, stage: :header %>
+    <%= render 'dashboard', artist: @artist, stage: :layout %>
   </div>
 </div>
