make about me display more like figma

--- a/app/views/artists/_layout.html.erb
+++ b/app/views/artists/_layout.html.erb
@@ -10,8 +10,9 @@
     <%= f.input :quotation_caption %>
   </div>
   <h2>Page Content</h2>
+  <h3>About Me</h3>
   <div class="p-3">
-    <%= f.input :about_me %>
+    <%= f.input :about_me, label: false %>
   </div>
   <div class="border-bottom-light-gray mb-3"></div>
   <div class="p-3">
