--- a/app/assets/stylesheets/components/_form_panel.scss
+++ b/app/assets/stylesheets/components/_form_panel.scss
@@ -9,6 +9,22 @@
     @extend .pb-3;
     @extend .pl-3;
     @extend .border-top-light-gray;
+    @extend .m-0;
+    font-size: 1rem;
+    &:first-of-type{
+      border-top: none !important;
+    }
+  }
+  h3{
+    background-color: #F0F0F0;
+    font-style: italic;
+    font-family: $body-font;
+    font-weight: 100;
+    @extend .pt-3;
+    @extend .pb-3;
+    @extend .pl-3;
+    @extend .m-0;
+    @extend .border-top-light-gray;
     font-size: 1rem;
     &:first-of-type{
       border-top: none !important;
