--- a/app/views/artists/_layout.html.erb
+++ b/app/views/artists/_layout.html.erb
@@ -14,6 +14,14 @@
   <div class="p-3">
     <%= f.input :about_me, label: false %>
   </div>
+  <% @blocks.each_with_index do |block, index| %>
+    <h3>Block <%= index + 1 %></h3>
+    <div class="p-3">
+      <%= simple_fields_for block, remote: true do |b| %>
+        <%= b.input :title %>
+      <% end %>
+    </div>
+  <% end %>
   <div class="border-bottom-light-gray mb-3"></div>
   <div class="p-3">
     <%= f.button :submit, "Save" %>
