--- a/app/views/artists/_resume_block_fields.html.erb
+++ b/app/views/artists/_resume_block_fields.html.erb
@@ -1,12 +1,14 @@
 <div class="nested-fields">
-  <h3>Block</h3>
+  <h3>Block <%= link_to_remove_association "- Remove", f, class: 'pl-3' %></h3>
   <div class="form-inline pl-3 pr-3 pt-3">
     <%= f.input :title, label_html: { class: 'pr-3' } %>
   </div>
+  <div class="border-bottom-light-gray mb-3 mt-3"></div>
   <%= f.simple_fields_for :resume_items do |item| %>
     <%= render 'resume_item_fields', f: item %>
   <% end %>
   <div class="pl-3 pr-3 pb-3">
-    <%= link_to_add_association 'Add item', f, :resume_items %>
+    <%= link_to_add_association '+ Add item', f, :resume_items, class: 'button-tertiary w-100' %>
   </div>
+  <div class="border-bottom-light-gray mb-3"></div>
 </div>
