--- a/app/views/artists/_resume_item_fields.html.erb
+++ b/app/views/artists/_resume_item_fields.html.erb
@@ -4,6 +4,7 @@
       <div class="row">
         <div class="col-12 col-sm-4">
           <%= f.input :description %>
+          <%= f.input :position, as: :hidden %>
         </div>
         <div class="col-12 col-sm-4">
           <%= f.input :label, required: false %>
