--- a/app/views/artists/_resume_block_fields.html.erb
+++ b/app/views/artists/_resume_block_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="nested-fields">
-  <h3>Block <%= link_to_remove_association "- Remove", f, class: 'pl-3' %> <i class="fas fa-grip-lines handle pr-3 cursor-pointer float-right"></i></h3>
+  <h3>Block <%= link_to_remove_association "- Remove", f, class: 'pl-3' %> <i class="fas fa-grip-lines handle pr-3 cursor-move c-light-gray float-right"></i></h3>
   <div class="form-inline pl-3 pr-3 pt-3">
     <%= f.input :title, label_html: { class: 'pr-3' } %>
     <%= f.input :position, as: :hidden %>
