--- a/app/views/artists/_resume_item_fields.html.erb
+++ b/app/views/artists/_resume_item_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="nested-fields">
+<div class="nested-fields cursor-move">
   <div class="row p-3 flex-center">
     <div class="col-12 col-sm-10">
       <div class="row">
