expose init as a global function

--- a/app/views/artists/layout.js.erb
+++ b/app/views/artists/layout.js.erb
@@ -4,3 +4,4 @@ function refreshDashboard(innerHTML) {
 }
 
 refreshDashboard('<%= j render "dashboard", artist: @artist, stage: :layout %>');
+window.init();
