--- a/app/views/artists/_edit_collections.html.erb
+++ b/app/views/artists/_edit_collections.html.erb
@@ -7,6 +7,9 @@
           <li class="list-group-item list-group-item-action"><%= collection.name %></li>  
         <% end %>
       <% end %>
+      <%= link_to new_artist_collection_path(@artist), remote: true do %>
+        <li class="list-group-item list-group-item-action">+ Add collection</li>  
+      <% end %>
     </ul>
   </div>
 <% end %>
