--- a/app/views/collections/_new.html.erb
+++ b/app/views/collections/_new.html.erb
@@ -2,7 +2,7 @@
   <div class="p-3">
     <%= link_to "< Back", edit_collections_artist_path(artist), remote: true, class: 'button-tertiary' %>
   </div>
-  <h2>New Artist</h2>
+  <h2>New Collection</h2>
   <div class="p-3">
     <%= f.input :name %>
   </div>
