--- a/app/views/collections/create.js.erb
+++ b/app/views/collections/create.js.erb
@@ -3,7 +3,7 @@ function refreshForm(innerHTML) {
   form.innerHTML = innerHTML;
 }
 
-<% if @collection.valid? %>
+<% if @collection.errors.any? %>
   refreshForm('<%= j render "artists/edit_collections", artist: @artist %>');
 <% else %>
   refreshForm('<%= j render "new", artist: @artist, collection: @collection %>');
