--- a/app/views/artists/_edit_links.html.erb
+++ b/app/views/artists/_edit_links.html.erb
@@ -9,7 +9,7 @@
           </div>
           <div class="image">
             <% if link.photo.present? %>
-              <%= cl_image_tage link.photo %>
+              <%= cl_image_tag link.photo %>
             <% end %>
           </div>
         </li>  
