dramatically simplify codebase by using a stage param instead of separate routes on artists#edit

--- a/app/views/artists/edit.js.erb
+++ b/app/views/artists/edit.js.erb
@@ -3,5 +3,5 @@ function refreshDashboard(innerHTML) {
   form.innerHTML = innerHTML;
 }
 
-refreshDashboard('<%= j render "dashboard", artist: @artist, stage: :header %>');
+refreshDashboard('<%= j render "dashboard", artist: @artist, stage: @stage %>');
 window.init();
