--- a/app/views/artists/_navigation.html.erb
+++ b/app/views/artists/_navigation.html.erb
@@ -1,9 +1,9 @@
 <nav id="edit-navigation" class="secondary-navigation">
   <ul>
-    <li class="<%= "selected" if stage == :header %>"><%= link_to 'Header', edit_artist_path(artist), remote: true %></li>
-    <li class="<%= "selected" if stage == :layout %>"><%= link_to 'Layout', layout_artist_path(artist), remote: true %></li>
-    <li class="<%= "selected" if stage == :artworks %>"><%= link_to 'Artworks', edit_collections_artist_path(artist), remote: true %></li>
-    <li class="<%= "selected" if stage == :links %>"><%= link_to 'Links', edit_links_artist_path(artist), remote: true %></li>
-    <li class="<%= "selected" if stage == :upcoming_projects %>"><%= link_to 'Upcoming Projects', "", remote: true %></li>
+    <li class="<%= "selected" if stage == :header %>"><%= link_to 'Header', edit_artist_path(artist, stage: :header), remote: true %></li>
+    <li class="<%= "selected" if stage == :layout %>"><%= link_to 'Layout', edit_artist_path(artist, stage: :layout), remote: true %></li>
+    <li class="<%= "selected" if stage == :artworks %>"><%= link_to 'Artworks', edit_artist_path(artist, stage: :artworks), remote: true %></li>
+    <li class="<%= "selected" if stage == :links %>"><%= link_to 'Links', edit_artist_path(artist, stage: :links), remote: true %></li>
+    <li class="<%= "selected" if stage == :upcoming_projects %>"><%= link_to 'Upcoming Projects', edit_artist_path(artist, stage: :upcoming_projects), remote: true %></li>
   </ul>
 </nav>
