--- a/app/views/collections/_new.html.erb
+++ b/app/views/collections/_new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [artist, collection], remote: true do |f| %>
   <div class="p-3">
-    <%= link_to "< Back", edit_collections_artist_path(artist), remote: true, class: 'button-tertiary' %>
+    <%= link_to "< Back", edit_artist_path(artist, stage: :artworks), remote: true, class: 'button-tertiary' %>
   </div>
   <h2>New Collection</h2>
   <div class="p-3">
