name files a bit better

--- a/app/views/collections/create.js.erb
+++ b/app/views/collections/create.js.erb
@@ -6,6 +6,6 @@ function refreshForm(innerHTML) {
 <% if @collection.errors.any? %>
   refreshForm('<%= j render "new", artist: @artist, collection: @collection %>');
 <% else %>
-  refreshForm('<%= j render "artists/edit_collections", artist: @artist %>');
+  refreshForm('<%= j render "artists/artworks", artist: @artist %>');
 <% end %>
 window.init();
