implement upcoming projects pages on dashboard

--- a/app/views/artists/_dashboard.html.erb
+++ b/app/views/artists/_dashboard.html.erb
@@ -13,8 +13,8 @@
         <%= render 'artworks', artist: artist %>
       <% when :links %>
         <%= render 'links', artist: artist %>
-      <% when :projects %>
-        <%= render 'projects', artist: artist %>
+      <% when :upcoming_projects %>
+        <%= render 'upcoming_projects', artist: artist %>
       <% end %>
     </div>
   </div>
