add feature spec for upcoming projects

--- a/app/views/artists/_upcoming_projects.html.erb
+++ b/app/views/artists/_upcoming_projects.html.erb
@@ -19,5 +19,5 @@
 </div>
 
 <div class="p-3">
-  <%= link_to '+ Add project', new_artist_upcoming_project_path(@artist), remote: true, class: 'button-tertiary w-100' %>
+  <%= link_to '+ Add upcoming project', new_artist_upcoming_project_path(@artist), remote: true, class: 'button-tertiary w-100' %>
 </div>
